--- a/_posts/11-05-2025-asm.md
+++ b/_posts/11-05-2025-asm.md
@@ -1,3 +1,7 @@
 ##Assembly Basic 
+
 https://www.tutorialspoint.com/assembly_programming/index.htm
 
+1. Basic Syntax
+- 1 chương trình Asm cơ bản chia ra làm 3 sections:
++ The data section : 
