--- a/_posts/12-5-2025-NWC204.md
+++ b/_posts/12-5-2025-NWC204.md
@@ -1,2 +1,27 @@
 ##NWC204 
 
+* Cấu hình Switch
+  1. User Exce mode
+     Switch >  enable 
+  2. Đặc quyền :
+    Switch #_ config terminal 
+  3. Config user mode
+    Switch(config) #line console 0/ Interface 0/1
+          (config-line)#exit 
+          (config-if)#
+
+     S # ping?
+     S # show?
+   4. Đặt tên
+   Switch# configure terminal
+   Switch(config)# hostname Sw-Floor-1
+   5. Password
+   Các bước : configure terminal - line console 0 - password cisco - login - end
+   6. Banner : Switch# banner motd # Author Config update#
+   7. Lưu lại cấu hình
+   Cách 1 : Copy running-config startup-config
+   Cách 2 : Copy / Export : file Startup-config
+   Cách 3 : Server : Lưu Server/TFPS
+   8. Cổng và địa chỉ IP
+    
+   
