--- a/_posts/11-05-2025-asm.md
+++ b/_posts/11-05-2025-asm.md
@@ -1,7 +1,50 @@
 # Assembly Basic 
 
 https://www.tutorialspoint.com/assembly_programming/index.htm
+https://www.codewars.com/dashboard
 
 1. Basic Syntax
 - 1 chương trình Asm cơ bản chia ra làm 3 sections:
-+ The data section : 
++ The data section : The data section is used for declaring initialized data or constants. This data does not change at runtime. You can declare various constant 
+ values, file names, or buffer size, etc., in this section
+
+      syntax : section.data
++ The bss section : The bss section is used for declaring variables
+
+      syntax : section.bss
+
++ The text section : The text section is used for keeping the actual code. This section must begin with the declaration global _start, which tells the kernel where the program execution begins.
+
+       syntax :
+           section.text
+              global _start
+           _start:
+- Comments trong assembly sử dụng dấu ;
+- "Hello World!" Programming bằng assembly:
+
+        section.text
+            global_start
+
+        _start:
+            mov edx, len
+            mov ecx, msg
+            mov ebx, 1
+            mov eax, 4
+            int 0x80
+
+            mov eax, 1
+            int 0x80
+
+         section.data
+         msg db 'Hello, World!', 0xa
+         len equ $ - msg
+
+  - NASM compiling and linking in linux :
+
+         + create program.asm
+         + to assemble the program : nasm  -f elf program.asm
+         + after assemble, 1 file program.o will be appeared.
+         + To link the object file and create an executable file: ld -m elf_i386 -s -o progran program.o
+         + Run the program ./program
+
+  
